--- a/site.css
+++ b/site.css
@@ -56,14 +56,7 @@ html[xmlns] .clearfix { display: block }
 #header .pages li, .menu li { display: block; float: left; }
 #header .pages a { margin-right: 16px }
 .pages a, .fixed .pages a, .more-likes, .like_link a { background: rgba(0,0,0,0.05); font-size: 11px; font-weight: 500; text-transform: uppercase; padding: 3px 11px; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px; }
-#search { width: 180px; padding: 7px 0 0 35px; float: right; }
-#search-form { width: 135px; padding: 0 16px 0 29px; position: relative; }
-#search-form span { background: url(http://static.tumblr.com/njty47g/MVTleufew/search.png) left top no-repeat; height: 32px; display: block; position: absolute; top: 0; }
-#search-form .left { width: 29px; left: 0; }
-#search-form .right { width: 16px; right: 0; background-position: right top; }
-#search-form input { background: url(http://static.tumblr.com/njty47g/MVTleufew/search.png) left bottom repeat-x; color: #999; font-family: Arial, Helvetica Neue, sans-serif; font-size: 12px; height: 23px; padding: 5px 0 4px; border: 0; width: 135px; display: block; line-height: 24px; }
-#search-form input:focus { color: #444 }
-#page { padding-top: 130px }
+#page { padding-top: 80px }
 #page, .inner { width: 760px }
 .banner { margin: -15px 0 40px; }
 .banner img { max-width: 760px; }
@@ -289,7 +282,7 @@ ol.notes li blockquote a { color: #74787A }
 .content-700 .tag_masonify .photo-panel { width: 350px }
 .content-700 .tag_masonify .span2col { width: 700px }
 .content-700 #page, .content-700 .inner { width: 700px }
-.content-700 .banner .blog-title { font-family: 'Open Sans Condensed', sans-serif; text-transform: uppercase; font-style:italic; font-size: 81px; text-shadow: 2px -1px 1px #aaa;}  
+.content-700 .banner .blog-title { font-family: 'Open Sans Condensed', sans-serif; text-transform: uppercase; font-style:italic; font-size: 81px;}  
 .content-700 #content { width: 700px }
 .content-700 .post .post-shadow { background-position: left bottom }
 .content-700 .copy .post-title { font-size: 24px }
