--- a/site.css
+++ b/site.css
@@ -62,8 +62,8 @@ html[xmlns] .clearfix { display: block }
 .banner img { max-width: 760px; }
 .banner .blog-title { font-size: 38px; letter-spacing: -0.015em; }
 .banner .tagline { font-size: 16px; font-weight: 300; padding-bottom: 0; }
-.textual { margin: 15px 0 75px; text-align: center;}
-#content { width: 500px;}
+.textual { margin: 15px 0 75px; text-align: center; }
+#content { width: 500px; }
 #footer { font-size: 12px; line-height: 19px; }
 #footer { margin-top: 30px; clear: both; position: relative; z-index: 2; }
 #footer .footer-panel { padding: 30px 0; position: relative; clear: both; }
@@ -111,8 +111,9 @@ ol.notes li blockquote a { color: #74787A }
 .post { position: relative; z-index: 1; margin-bottom: 50px; }
 .post .post-panel { background-color: rgba(0,0,0,0.4); -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.03) inset, 0 0 0 1px rgba(0,0,0,0.15); -moz-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.03) inset, 0 0 0 1px rgba(0,0,0,0.15); box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.03) inset, 0 0 0 1px rgba(0,0,0,0.15); position: relative; z-index: 3;}
 .post .post-shadow { background: url(http://static.tumblr.com/njty47g/yu0leufgq/post_shadow.png) left top no-repeat; width: 100%; height: 10px; display: block; position: absolute; left: 0; bottom: -10px; z-index: 2; }
-.copy, .notes { color: #626566 }
+.copy, .notes { color: #626566;}
 .copy { padding-top: 30px; margin: 0 30px; clear: both; word-wrap: break-word; font-family: Helvetica Neue, Arial, sans-serif;}
+.post-text {font-size: 18px; font-family: 'Open Sans Condensed', sans-serif; color: #4f4f4f;}
 .copy .post-title { font-size: 22px; margin: 0 0 25px 0; }
 .copy .post-title a:hover, .copy a:hover, ol.notes a:hover {background-color: transparent; color:#fafafa;}
 .copy .post-title a { border: 0; margin: 0; }
@@ -167,8 +168,8 @@ ol.notes li blockquote a { color: #74787A }
 .meta .permalink a:hover .icon { width: 20px; background-position: -37px -62px;}
 .meta .permalink .icon { width: 20px; background-position: -37px -46px;}
 .meta .tags { margin: 0; display: block; float: none; }
-.meta .tags a { color: #bbb }
-.meta .tags a:hover { color: #5a5a5a }
+.meta .tags a { color: #353535 }
+.meta .tags a:hover { color: #6a6a6a }
 .meta .share { position: absolute; right: 0; bottom: 3px; margin: 0; width: 70px; }
 .meta .share .share-btn { background: url(http://static.tumblr.com/xgwqnql/OSQlbpg0q/share.png) left top no-repeat; color: #aaa; line-height: 23px; height: 23px; padding-left: 30px; outline: 0; display: block; -webkit-border-top-left-radius: 2px; -webkit-border-top-right-radius: 2px; -moz-border-radius: 2px 2px 0 0; border-radius: 2px 2px 0 0; }
 .meta .share .share-btn:hover { background-position: left bottom; color: #4E5251; text-shadow: 0 1px 0 #fff; }
