--- a/site.css
+++ b/site.css
@@ -67,12 +67,12 @@ html[xmlns] .clearfix { display: block }
 #footer { font-size: 12px; line-height: 19px; }
 #footer { margin-top: 30px; clear: both; position: relative; z-index: 2; }
 #footer .footer-panel { padding: 30px 0; position: relative; clear: both; }
-#footer-end { padding: 30px 0 50px; position: relative; clear: both; font-famil: Helvetica Neue, Arial, sans-serif; }
+#footer-end { padding: 30px 0 50px; position: relative; clear: both; font-family: Helvetica Neue, Arial, sans-serif; }
 #footer h2 { font-size: 20px; margin-bottom: 30px; }
-#footer-end .credits { float: left, color:#4c4c4c; }
-#footer-end .credits a{ color:#4c4c4c; }
+#footer-end .credits a{ color:#5c5c5c; }
 #footer-end .tumblr { float: right; padding-left: 23px; margin-top: -20px; }
-#footer-links { font-size: 12px; font-weight: bold; margin-bottom: 5px; }
+#footer-links { font-size: 12px; margin-bottom: 5px; }
+#footer-links li a { color:#5c5c5c;}
 #footer-links li { line-height: 1; padding: 0 8px; border-left: 1px solid rgba(0, 0, 0, 0.1); display: block; float: left; }
 #footer-links li:first-child { padding-left: 0; border-left: 0; }
 #pagination { margin-bottom: 30px }
